--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
-	"name": "test_botanajs",
-	"version": "1.0.0",
-	"description": "Pinasu's Twitch chatbot",
-	"main": "main.js",
-	"scripts": {
-		"start": "electron ."
-	},
-	"author": "Pinasu",
-	"license": "ISC",
-	"devDependencies": {
-		"electron": "^3.0.0"
-	},
-	"dependencies": {
-		"jquery": "^3.3.1"
-	}
+  "name": "test_botanajs",
+  "version": "1.0.0",
+  "description": "Pinasu's Twitch chatbot",
+  "main": "main.js",
+  "scripts": {
+    "start": "electron ."
+  },
+  "author": "Pinasu",
+  "license": "ISC",
+  "devDependencies": {
+    "electron": "^3.0.0"
+  },
+  "dependencies": {
+    "jquery": "^3.3.1",
+    "request": "^2.88.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pinasu/BotAna-Electron.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/pinasu/BotAna-Electron/issues"
+  },
+  "homepage": "https://github.com/pinasu/BotAna-Electron#readme"
 }
