--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "electron-rebuild": "^1.10.1"
   },
   "dependencies": {
-    "jquery": "^3.4.1",
+    "electron-db": "^1.0.0",
+    "jquery": "^3.5.1",
     "request": "^2.88.0",
-    "sqlite3": "^4.2.0"
+    "source": "0.0.3",
+    "sqlite3": "^4.2.0",
+    "upath": "^1.2.0"
   },
   "repository": {
     "type": "git",
